--- a/index.html
+++ b/index.html
@@ -69,5 +69,5 @@ Do you want to play a new game?</span>
    <div class="right leg"></div>
    <button id="r">New game</button>
 </div>
-<script src="Java.js"></script>
+<script src="app.js"></script>
 </body>
