--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
    <title> connect 4</title>
-   <link rel="stylesheet" type="text/css" href="Style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <span id="a">red</span>
