--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-   <title> connect 4</title>
+   <title> Verbind de 5 werelddelen</title>
    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
